--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-	"homepage": "https://jafb727.github.io/MonstersRolodex.git",
-	"name": "monstersrolodex",
+	"name": "monsterrolodex",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -9,12 +8,10 @@
 		"@testing-library/user-event": "^12.1.10",
 		"react": "^17.0.1",
 		"react-dom": "^17.0.1",
-		"react-scripts": "4.0.1",
+		"react-scripts": "^4.0.1",
 		"web-vitals": "^0.2.4"
 	},
 	"scripts": {
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
@@ -38,7 +35,5 @@
 			"last 1 safari version"
 		]
 	},
-	"devDependencies": {
-		"gh-pages": "^3.1.0"
-	}
+	"devDependencies": {}
 }
